Added order seeding data to TestConfig class